syntax = "proto3";
option optimize_for = LITE_RUNTIME;
package Pb.Base;


enum ServerType{
    ST_NONE = 0;
    ST_CLIENT = 1;
    ST_GATE = 2;
    ST_GAME = 3;

}

enum MSG_ID 
{
    ID_0 = 0;
    ID_HELLO        = 1;
    ID_PING         = 2;
    ID_PONG         = 3;
}


message Hello
{
    ServerType servertype = 1;  // 
    string name = 2;
}


message Ping{
    int64 t1 = 1;
}

message Pong
{
    int64 t1 = 1;
    int64 t2 = 2;
}


